deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: next-app
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  replicas: 2
  selector:
    matchLabels:
      app: next-app

  template:
    metadata:
      labels:
        app: next-app
    spec:
      imagePullSecrets:
      - name: harbor-secret
      containers:
      - name: next-app
        image: reg.rullabcd.my.id/library/app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 15
        #   periodSeconds: 20
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
