service.yml
apiVersion: v1
kind: Service

metadata:
  name: next-app-service
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  type: NodePort

  selector:
    app: next-app
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
