ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: next-app-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    argocd.argoproj.io/sync-wave: "2"

spec:
  rules:
  - host: next.rullabcd.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-app-service
            port:
              number: 3000
